<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".welcome_1">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="267dp"
        android:layout_height="359dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/newlabeb" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/jannalt_regular"
        android:text="@string/Hi"
        android:textColor="@android:color/background_light"
        android:textSize="47sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/lemon"
        android:text="@string/nametext"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="27dp"
        android:fontFamily="@font/jannalt_regular"
        android:text="@string/namelabel"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="296dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameval" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="78dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/jalal_lt_light"
        android:text="@string/buttonstarttext"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"

        />

</RelativeLayout>
<!-- test number 3 --> 