<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".welcome_5">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="35dp"
        android:text="@string/welcome5_1text"
        android:textColor="@color/light_font"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="60dp"
        android:text="@string/welcome5_2text"
        android:textColor="@color/light_font"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView23"
        android:layout_alignParentTop="true"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="-47dp"
        android:text="@string/welcome5_3text"
        android:textColor="@color/light_font"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="142dp"
        android:text="@string/welcome5_4text"
        android:textSize="25sp"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="556dp"
        android:layout_marginBottom="12dp"
        app:srcCompat="@drawable/newpre"

        />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/desc"
        app:srcCompat="@drawable/newnext" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="170dp"
        android:layout_height="348dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/welcome_5robot" />


</RelativeLayout>