<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".welcome_7">

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="293dp"
        android:layout_height="281dp"
        android:layout_alignBottom="@+id/textView30"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="-11dp"
        app:srcCompat="@drawable/welcome7robot" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="38dp"
        android:text="@string/welcome7_1text"
        android:textColor="@color/light_font"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="43dp"
        android:text="@string/welcome7_2text"
        android:textColor="@color/light_font"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="88dp"
        android:text="@string/welcome7_3text"
        android:textColor="@color/light_font"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/desc"
        app:srcCompat="@drawable/newnext"

        />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="566dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/newpre"

        />
</RelativeLayout>