<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".welcome_3">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/beforestart"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/programming"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView20"
        android:layout_alignParentStart="true"
        android:layout_marginStart="271dp"
        android:contentDescription="@string/desc"
        android:layout_marginTop="9dp"
        app:srcCompat="@drawable/bulb" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="102dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/desc"
        app:srcCompat="@drawable/newnext" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="246dp"
        android:layout_height="241dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="203dp"
        android:layout_marginBottom="2dp"
        app:srcCompat="@drawable/robot_welcome3" />
</RelativeLayout>