<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
   android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".welcome_6">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="57dp"
        android:fontFamily="@font/jannalt_regular"
        android:text="@string/welcome5_4text"
        android:textColor="@color/yellow1"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/jannalt_regular"
        android:text="@string/welcome6_1text"
        android:textColor="@color/light_font"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="81dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="497dp"
        android:layout_marginBottom="5dp"
        app:srcCompat="@drawable/newpre"

        />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/desc"
        app:srcCompat="@drawable/newnext"

        />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="349dp"
        android:layout_height="254dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="64dp"
        app:srcCompat="@drawable/welcome_robot6" />
</RelativeLayout>